--- a/backend-node-ts/package.json
+++ b/backend-node-ts/package.json
@@ -13,7 +13,8 @@
   "description": "Pequeño backend con Node y Typescript",
   "dependencies": {
     "express": "^5.2.1",
-    "express-handlebars": "^8.0.4"
+    "express-handlebars": "^8.0.4",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
